# SkillMaster-AI

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: .coverage  Dockerfile  pyproject.toml
apps/api/app/: auth.py  config.py  database.py  main.py  middleware.py  models.py  schemas.py
apps/api/app/routers/: ai_tutor.py  analytics.py  auth.py  certificates.py  code.py  courses.py  enrollments.py  gamification.py  health.py  learning_path.py  notifications.py  progress.py  quiz.py  reviews.py  search.py  users.py  websocket.py
apps/api/app/services/: __init__.py  code_executor.py  gamification.py  learning_path.py  quiz_generator.py  rag.py  websocket_manager.py
apps/api/tests/: conftest.py  test_advanced_features.py  test_ai_features.py  test_auth.py  test_comprehensive.py  test_courses.py  test_courses_extended.py  test_enrollments.py  test_enrollments_extended.py  test_middleware.py  test_progress.py  test_users.py
apps/bff/: Dockerfile  eslint.config.js  package.json  tsconfig.json
apps/bff/src/: index.ts
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/components/__tests__/: dashboard.test.tsx  header.test.tsx
apps/web/src/lib/: api-client.ts  auth.ts  store.ts  utils.ts
infrastructure/docker/: prometheus.yml
(+20 files in other folders)
